2014-05-28  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server,
	  lib/PandoraFMS/Config.pm: Removed getopts. Fixes a problem found by Junichi.

2014-05-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: If no logfile is defined print the message to
	  stdout.

2014-05-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Make sure critical_str and warning_str are valid
	  regular expressions.

2014-05-27  Ramon Novoa  <rnovoa@artica.es>

	* bin/tentacle_server: Updated to the latest version.

2014-05-25  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Fixed STD* file open error.

2014-05-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/NmapParser.pm,
	  lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/Tools.pm,
	  lib/PandoraFMS/Traceroute.pm,
	  lib/PandoraFMS/WMIServer.pm: Fixes for win32.

2014-05-21  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Improved 'FF threshold' to be able to define
	each state changing.

2014-05-20  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Stop the service when the server crashes (win32).

2014-05-13  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Added support to run as a native win32 service.

2014-05-10  Junichi Satoh <junichi@rworks.jp>

	* util/recon_script/ipmi-recon.pl, util/recon_script/snmpdevices.pl,
	util/recon_script/wmi-recon.pl: Added support for FreeBSD.

2014-05-09  Ramon Novoa  <rnovoa@artica.es>

	* bin/tentacle_server.exe: Added to repository. Tentacle server win32
	  binary.

2014-05-08  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/ReconServer.pm: Fixed crash when macros help of
	recon script contains \r, \n or multibyte characters.

2014-05-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Added code to initialize the enterprise module.

2014-05-06  Junichi Satoh <junichi@rworks.jp>
